--- a/src/app/pages/shared/pesan-sekarang/pesan-sekarang.page.html
+++ b/src/app/pages/shared/pesan-sekarang/pesan-sekarang.page.html
@@ -15,55 +15,56 @@
       <div class="flex justify-center gap-1 mb-2">
         <ion-icon *ngFor="let s of [1,1,1,1,0]" [color]="s? 'warning' : 'light'" name="star"></ion-icon>
       </div>
-      <div class="text-xl font-bold">Fernanda Reza Aditya</div>
-      <div class="text-sm">Kota Malang, Kec. Lowokwaru</div>
-      <div class="text-sm">098182736234</div>
+      <div class="text-xl font-bold ion-text-capitalize">{{barber.name || '-'}}</div>
+      <div class="text-sm">{{barber.address}}</div>
+      <div class="text-sm">{{barber.phoneNumber}}</div>
     </div>
   </div>
 
 
-  <ion-card mode="ios" class="ion-no-margin">
+  <ion-card *ngIf="barber.barber?.price as price" mode="ios" class="ion-no-margin">
     <ion-card-header>
       <ion-card-title class="ion-text-center">Pesan Sekarang</ion-card-title>
       <!-- <ion-card-subtitle>Card Subtitle</ion-card-subtitle> -->
     </ion-card-header>
     <ion-card-content class="ion-margin-top">
-      <div class="flex">
+      <div class="flex items-center">
         <div class="flex-1">
-          <h2><b>Malang</b></h2>
-          <div>Jumlah Pesanan</div>
+          <!-- <h2><b>Malang</b></h2> -->
+          <h2><b>Jumlah Pesanan</b></h2>
+          <!-- <div>Jumlah Pesanan</div> -->
         </div>
         <div class="items-center border rounded-xl border-light-shade flex">
 
-          <div style="padding: 10px 13px">-</div>
+          <div style="padding: 10px 13px" (click)="kurangiJumlahPemesanan()">-</div>
           <div>
-            <ion-input class="ion-no-padding input-jumlah text-center border-l border-r border-light-shade" value="2" style="width: 40px;"></ion-input>
+            <ion-input [(ngModel)]="jumlahPemesanan" class="ion-no-padding input-jumlah text-center border-l border-r border-light-shade" style="width: 40px;"></ion-input>
           </div>
-          <div style="padding: 10px 13px">+</div>
+          <div style="padding: 10px 13px" (click)="tambahJumlahPemesanan()">+</div>
         </div>
       </div>
       <hr class="mt-3 mb-3">
-      <h2><b>Detail Harge</b></h2>
+      <h2><b>Detail Harga</b></h2>
       <div class="text-medium">
         <div class="flex justify-between">
           <div>Jasa Potong Rambut</div>
-          <div>Rp. 50.000,-</div>
+          <div>Rp. {{price | number:'2.0'}},-</div>
         </div>
         <div class="flex justify-between">
           <div>Transport</div>
-          <div>Rp. 10.000,-</div>
+          <div>Rp. 5.000,-</div>
         </div>
         <div class="flex justify-between">
           <div>Jumlah Pesanan</div>
-          <div>2x</div>
+          <div>{{jumlahPemesanan}}x</div>
         </div>
       </div>
       <hr class="bg-light mt-3 mb-3">
       <div class="flex justify-between">
-        <h2><b>Total Harge</b></h2>
-        <div><b>Rp. 60.000,-</b></div>
+        <h2><b>Total Harga</b></h2>
+        <div><b>Rp. {{(price * jumlahPemesanan) + 5000 | number:'2.0'}},-</b></div>
       </div>
     </ion-card-content>
   </ion-card>
-  <ion-button mode="ios" color="warning" class="w-full ion-no-margin ion-margin-top">Pesan Sekarang</ion-button>
+  <ion-button mode="ios" color="warning" class="w-full ion-no-margin ion-margin-top" (click)="pesanSekarang()">Pesan Sekarang</ion-button>
 </ion-content>
