--- a/src/theme/custom.scss
+++ b/src/theme/custom.scss
@@ -148,7 +148,7 @@
 .text-danger { color: var(--ion-color-danger) }
 .text-on-danger { color: var(--ion-color-danger-contrast) }
 .text-warning { color: var(--ion-color-warning); }
-.text-green {color: #31CF67;}
+.text-success { color: var(--ion-color-success); }
 .text-light {color: var(--ion-color-light)}
 
 // Display
