--- a/src/app/pages/public/riwayat/riwayat.page.html
+++ b/src/app/pages/public/riwayat/riwayat.page.html
@@ -4,213 +4,55 @@
       Riwayat
     </ion-title>
   </ion-toolbar>
-  <ion-toolbar>
+  <!-- <ion-toolbar>
     <ion-searchbar mode="ios" color="light" class="ion-padding" clearIcon="close-sharp" debounce="100">
     </ion-searchbar>
-  </ion-toolbar>
+  </ion-toolbar> -->
 </ion-header>
 
+
+
 <ion-content class="ion-padding">
-  <div *ngIf="(histories$ | async) as histories">
-    <ng-container *ngIf="histories.length > 0; else noHistories">
-      <div *ngFor="let history of histories; trackBy: trackByFn"
-        class=" ion-padding bg-background drop-shadow-lg items-center rounded-lg mb-4">
+  <div *ngIf="(orders$ | async) as orders">
+    <ng-container *ngIf="orders.length > 0; else noOrders">
+      <ion-card mode="ios" *ngFor="let order of orders; trackBy: trackByFn" class="rounded-xl ion-no-margin ion-margin-bottom ion-padding" [routerLink]="'/detail-pemesanan/' + order.id">
         <div class="flex justify-between">
           <div class="flex-1">
-            <div class="font-bold text-2xl">Fernanda Reza</div>
-            <div class="text-medium">Kota Malang, Kec. Lowokwaru</div>
+            <div class="font-bold text-2xl ion-text-capitalize -mt-1">{{order.barber?.name || '-'}}</div>
+            <div>{{order.barber?.address || '-'}}</div>
           </div>
-          <div class="text-right">
-            <div>
-              <div class="p-2 pt-1 pb-1 bg-primary text-on-primary text-center rounded-full">
-                Sukses
-              </div>
+          <!-- <div class="text-right">
+            <div [ngClass]="!order.status? 'bg-medium text-on-medium' : 'bg-primary text-on-primary'" class="pt-2 pb-2 pl-3 pr-3 text-center rounded-full">
+              {{!order.status? 'Menunggu' : 'Aktif'}}
             </div>
-          </div>
+          </div> -->
         </div>
-        <hr class="mt-4 mb-4" style="border-top:1px solid #999;">
-
-        <div class="flex ">
+        <hr class="bg-light">
+        <div class="flex">
           <div class="flex-1">
-            <div class="text-medium">Pemesan</div>
-            <div class="text-2xl font-bold">Anya Geraldine</div>
+            <small class="text-medium">Alamat Anda</small>
+            <div class="truncate-1">{{order.user.address}}</div>
           </div>
-
-          <div class="text-right flex-0">
-            <div class="text-xl font-bold">13.00</div>
-            <div class="text-medium truncate">23 Des 2022</div>
+          <div class="ion-text-right">
+            <small class="text-medium">Jumlah</small>
+            <div>{{order.amount}}x Orang</div>
           </div>
         </div>
-        <div class="text-medium mt-2">Perum. Puri Indah Jl. Galunggung K16</div>
-        <hr class="mt-4 mb-4" style="border-top:1px solid #999;">
-        <div class="flex justify-between">
-          <div>
-            <div class="text-medium">Jumlah Pesanan</div>
-            <div>2x</div>
+        <hr class="bg-light">
+        <div class="flex">
+          <div class="flex-1">
+            <small class="text-medium">Total Harga</small>
+            <div class="truncate-1 text-primary"><b>Rp {{order.price | number:'2.0'}},-</b></div>
           </div>
-          <div class="text-green flex items-center">
-            <div>
-              Detail Pemesanan
-            </div>
-            <div class=" flex">
-              <ion-icon name="chevron-forward"></ion-icon>
-            </div>
+          <div class="ion-text-right">
+            <small class="text-medium">Status</small>
+            <div [ngClass]="!order.status? 'text-medium' : 'text-success'"><b>{{!order.status? 'Menunggu' : 'Aktif'}}</b></div>
           </div>
-
         </div>
-
-
-      </div>
+      </ion-card>
     </ng-container>
-    <ng-template #noHistories>
+    <ng-template #noOrders>
       <div class="ion-text-center text-medium">Tidak ada riwayat pemesanan</div>
     </ng-template>
   </div>
-
-
-  <!-- <div class=" ion-padding bg-background drop-shadow-lg items-center rounded-lg mb-4">
-    <div class="flex justify-between">
-      <div class="flex-1">
-        <div class="font-bold text-2xl">Reza Aditya</div>
-        <div class="text-medium">Kota Malang, Kec. Lowokwaru</div>
-      </div>
-      <div class="text-right">
-        <div>
-          <div class="p-2 pt-1 pb-1 bg-primary text-on-primary text-center rounded-full">
-            Sukses
-          </div>
-        </div>
-      </div>
-    </div>
-    <hr class="mt-4 mb-4" style="border-top:1px solid #999;">
-
-    <div class="flex ">
-      <div class="flex-1">
-        <div class="text-medium">Pemesan</div>
-        <div class="text-2xl font-bold">Captain America</div>
-      </div>
-
-      <div class="text-right flex-0">
-        <div class="text-xl font-bold">13.00</div>
-        <div class="text-medium truncate">23 Des 2022</div>
-      </div>
-    </div>
-    <div class="text-medium mt-2">Perum. Puri Indah Jl. Galunggung K16</div>
-    <hr class="mt-4 mb-4" style="border-top:1px solid #999;">
-    <div class="flex justify-between">
-      <div>
-        <div class="text-medium">Jumlah Pesanan</div>
-        <div>2x</div>
-      </div>
-      <div class="text-green flex items-center">
-        <div>
-          Detail Pemesanan
-        </div>
-        <div class=" flex">
-          <ion-icon name="chevron-forward"></ion-icon>
-        </div>
-      </div>
-
-    </div>
-
-
-  </div>
-
-  <div class=" ion-padding bg-background drop-shadow-lg items-center rounded-lg mb-4">
-    <div class="flex justify-between">
-      <div class="flex-1">
-        <div class="font-bold text-2xl">Mas Tampan</div>
-        <div class="text-medium">Kota Malang, Kec. Lowokwaru</div>
-      </div>
-      <div class="text-right">
-        <div>
-          <div class="p-2 pt-1 pb-1 bg-primary text-on-primary text-center rounded-full">
-            Sukses
-          </div>
-        </div>
-      </div>
-    </div>
-    <hr class="mt-4 mb-4" style="border-top:1px solid #999;">
-
-    <div class="flex ">
-      <div class="flex-1">
-        <div class="text-medium">Pemesan</div>
-        <div class="text-2xl font-bold">Cindo Yahud</div>
-      </div>
-
-      <div class="text-right flex-0">
-        <div class="text-xl font-bold">13.00</div>
-        <div class="text-medium truncate">23 Des 2022</div>
-      </div>
-    </div>
-    <div class="text-medium mt-2">Perum. Puri Indah Jl. Galunggung K16</div>
-    <hr class="mt-4 mb-4" style="border-top:1px solid #999;">
-    <div class="flex justify-between">
-      <div>
-        <div class="text-medium">Jumlah Pesanan</div>
-        <div>2x</div>
-      </div>
-      <div class="text-green flex items-center">
-        <div>
-          Detail Pemesanan
-        </div>
-        <div class=" flex">
-          <ion-icon name="chevron-forward"></ion-icon>
-        </div>
-      </div>
-
-    </div>
-
-
-  </div>
-
-  <div class=" ion-padding bg-background drop-shadow-lg items-center rounded-lg mb-4">
-    <div class="flex justify-between">
-      <div class="flex-1">
-        <div class="font-bold text-2xl">Sugar Dady</div>
-        <div class="text-medium">Kota Malang, Kec. Lowokwaru</div>
-      </div>
-      <div class="text-right">
-        <div>
-          <div class="p-2 pt-1 pb-1 bg-primary text-on-primary text-center rounded-full">
-            Sukses
-          </div>
-        </div>
-      </div>
-    </div>
-    <hr class="mt-4 mb-4" style="border-top:1px solid #999;">
-
-    <div class="flex ">
-      <div class="flex-1">
-        <div class="text-medium">Pemesan</div>
-        <div class="text-2xl font-bold">Cece Surabaya</div>
-      </div>
-
-      <div class="text-right flex-0">
-        <div class="text-xl font-bold">13.00</div>
-        <div class="text-medium truncate">23 Des 2022</div>
-      </div>
-    </div>
-    <div class="text-medium mt-2">Perum. Puri Indah Jl. Galunggung K16</div>
-    <hr class="mt-4 mb-4" style="border-top:1px solid #999;">
-    <div class="flex justify-between">
-      <div>
-        <div class="text-medium">Jumlah Pesanan</div>
-        <div>2x</div>
-      </div>
-      <div class="text-green flex items-center">
-        <div>
-          Detail Pemesanan
-        </div>
-        <div class=" flex">
-          <ion-icon name="chevron-forward"></ion-icon>
-        </div>
-      </div>
-
-    </div>
-
-
-  </div> -->
-
-
 </ion-content>
