--- a/src/app/pages/public/riwayat/riwayat.page.html
+++ b/src/app/pages/public/riwayat/riwayat.page.html
@@ -15,10 +15,12 @@
 <ion-content class="ion-padding">
   <div *ngIf="(orders$ | async) as orders">
     <ng-container *ngIf="orders.length > 0; else noOrders">
-      <ion-card mode="ios" *ngFor="let order of orders; trackBy: trackByFn" class="rounded-xl ion-no-margin ion-margin-bottom ion-padding" [routerLink]="'/detail-pemesanan/' + order.id">
+      <div mode="ios" *ngFor="let order of orders; trackBy: trackByFn"
+        class="ion-padding bg-background drop-shadow-lg items-center rounded-xl" [routerLink]="'/detail-pemesanan/' + order.id">
         <div class="flex justify-between">
           <div class="flex-1">
-            <div class="font-bold text-2xl ion-text-capitalize -mt-1">{{order.barber?.name || '-'}}</div>
+            <small class="text-medium">Nama Barber</small>
+            <h5 class="ion-no-margin mb-2 font-bold ion-text-capitalize">{{order.barber?.name || '-'}}</h5>
             <div>{{order.barber?.address || '-'}}</div>
           </div>
           <!-- <div class="text-right">
@@ -28,7 +30,7 @@
           </div> -->
         </div>
         <hr class="bg-light">
-        <div class="flex">
+        <div class="flex gap-3">
           <div class="flex-1">
             <small class="text-medium">Alamat Anda</small>
             <div class="truncate-1">{{order.user.address}}</div>
@@ -46,10 +48,12 @@
           </div>
           <div class="ion-text-right">
             <small class="text-medium">Status</small>
-            <div [ngClass]="!order.status? 'text-medium' : 'text-success'"><b>{{!order.status? 'Menunggu' : 'Aktif'}}</b></div>
+            <div [ngClass]="order.status == 2? 'text-success' : 'text-danger'">
+              <b>{{order.status == 2? 'Selesai' : 'Batal'}}</b>
+            </div>
           </div>
         </div>
-      </ion-card>
+      </div>
     </ng-container>
     <ng-template #noOrders>
       <div class="ion-text-center text-medium">Tidak ada riwayat pemesanan</div>
