--- a/src/app/pages/shared/detail-barber/detail-barber.page.html
+++ b/src/app/pages/shared/detail-barber/detail-barber.page.html
@@ -55,14 +55,14 @@
               <ion-label><b>Ulasan</b></ion-label>
             </ion-item>
             <ion-list slot="content" class="ion-padding">
-              <div class="ion-margin-bottom">
+              <!-- <div class="ion-margin-bottom">
                 <ion-textarea class="border border-light-shade rounded-xl ion-margin-bottom"
                   placeholder="Tulis Komentarmu" rows="3">
                 </ion-textarea>
                 <div class="ion-text-right">
                   <ion-button mode="ios" class="ion-no-margin" style="width: 120px;">Kirim</ion-button>
                 </div>
-              </div>
+              </div> -->
               <!-- <hr class="bg-light"> -->
               <div class="flex items-center justify-between ion-margin-bottom">
                 <div class="flex items-center gap-1">
